--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
            <a href="#Responsive_3"><p>Responsive</p></a>
        </div>
        <div class="item">
-           <a href="#menu-bs"><h5>Menu System</h5></a>
+           <a href="#menu-bs"><h5>Navigation bar</h5></a>
        </div>
        <div class="item">
            <a href="#skins-bs"><h5>Skins</h5></a>
@@ -95,7 +95,6 @@
            <a href="#good-google-fonts"><h5>Good Google Fonts</h5></a>
            <a href="#good-google-fonts"><h5>Beautiful Web Type</h5></a>
            <a href="#hackdesign-bs"><h5>HackDesign</h5></a>
-           <a href="#design-tips-bs"><h5>Design Tips</h5></a>
        </div>
    </div>
 
@@ -179,17 +178,6 @@
         <h5 class="custom-color-grey-2">Carver is development framework that helps create beautiful web page. </h5>
     </div>
     <div class="frame">
-        <div class="bs-base t_center">
-            <ul class="li-inline ma-t_35 custom-color-grey-2">
-                <li class="h4 ma-rl_25"> Optimal size </li>
-                <li class="h4 ma-rl_25"> Handle spacing </li>
-                <li class="h4 ma-rl_25"> Readable website </li>
-                <li class="h4 ma-rl_25"> Utilities &amp; Tools </li>
-            </ul>
-        </div>
-        <div class="light-bs" id="introduction-bs">
-
-        </div>
         <div class="grid-bs o_auto" id="grid_bs">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Grid System</h2>
             <div class="row">
@@ -260,7 +248,7 @@
             </div>
         </div>
         <div class="menu-bs" id="menu-bs">
-            <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Menu System </h2>
+            <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Navigation bar </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
                     <p>There’s a list of available class, it’s understable, no explanation needed.</p>
@@ -668,7 +656,6 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
 
         <h2 class="ma-tb_25 ma-l_50 custom-color-brand" id="good-google-fonts"><a href="https://stabla.github.io/good-google-fonts/" class="a_reset">Good Google Fonts</a> &amp; <a href="http://chad.is/beautiful-web-type/" class="a_reset">Beautiful Web Type</a></h2>
         <h2 class="ma-tb_25 ma-l_50 custom-color-brand" id="hackdesign-bs"><a href="http://www.hackdesign.org" class="a_reset">Hack Design</a></h2>
-        <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Some tips.<a href="https://github.com/stabla/Carver" class="a_reset custom-color-brand t-small">(Add/Modify if you want!)</a></h2>
 
 
         <h2 class="ma-l_50 custom-color-brand"><a id="License"></a>License</h2>
@@ -686,7 +673,7 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
                     <div class="custom-dl">
                         <div class="box-custom-dl c_white">
-                            <div class="ckbx custom-checkbox unselected" id="Carver_light">Basesign</div>
+                            <div class="custom-checkbox unselected" style="padding: 33px;" id="Basesign"><a href="http://stabla.github.io/Basesign/" class="a_reset" target="_blank">Open Basesign</a></div>
                             <div class="ckbx custom-checkbox selected" id="bs_grid"> Grid system </div>
                             <div class="ckbx custom-checkbox selected" id="bs_nav"> Nav system </div>
                             <div class="ckbx custom-checkbox selected" id="bs_skins"> Skins </div>
