Fix Download & deleting Carver/ folder
Carver folder was useless. Download didn't worked

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/basesign.css">
     <link rel="stylesheet" href="stylesheets/prism.css">
-    <link rel="stylesheet" href="Carver/stylesheets/carver.css">
+    <link rel="stylesheet" href="stylesheets/carver.css">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16">
@@ -48,24 +48,24 @@
            <a href="#"><span class="h3">Carver</span><i>docs</i></a>
        </div>
        <div class="item">
-           <a href="#introduction-bs"><h5>Introduction</h5></a>
-           <a href="#build-yours-bs"><p>Download</p></a>
-           <a href="#install-bs" id="menu-install"><p>Install</p></a>
+           <a href="#introduction-cr"><h5>Introduction</h5></a>
+           <a href="#build-yours-cr"><p>Download</p></a>
+           <a href="#install-cr" id="menu-install"><p>Install</p></a>
        </div>
        <div class="item">
-           <a href="#grid-bs"><h5>Grid System</h5></a>
+           <a href="#grid-cr"><h5>Grid System</h5></a>
            <a href="#Basic_1"><p>Basic</p></a>
            <a href="#Offset_2"><p>Offset</p></a>
            <a href="#Responsive_3"><p>Responsive</p></a>
        </div>
        <div class="item">
-           <a href="#menu-bs"><h5>Navigation bar</h5></a>
+           <a href="#menu-cr"><h5>Navigation bar</h5></a>
        </div>
        <div class="item">
-           <a href="#skins-bs"><h5>Skins</h5></a>
+           <a href="#skins-cr"><h5>Skins</h5></a>
        </div>
        <div class="item">
-           <a href="#utilities-bs"><h5>Utilities</h5></a>
+           <a href="#utilities-cr"><h5>Utilities</h5></a>
            <a href="#general_1"><p>General</p></a>
            <a href="#Text_1"><p>Text</p></a>
            <a href="#Textdecoration__Texttransform_2"><p>Text-decoration</p></a>
@@ -82,10 +82,10 @@
            <a href="#Fonts_13"><p>Fonts</p></a>
        </div>
        <div class="item">
-           <a href="#claCss-bs"><h5>ClaCss.js</h5></a>
+           <a href="#claCss-cr"><h5>ClaCss.js</h5></a>
        </div>
        <div class="item">
-           <a href="#no-clacss-js-bs"><h5>Don't use ClaCss.js?</h5></a>
+           <a href="#no-clacss-js-cr"><h5>Don't use ClaCss.js?</h5></a>
            <a href="#Colors_noclacss-1"><p>Colors</p></a>
            <a href="#font_weight-noclacss-2"><p>Font-weight</p></a>
            <a href="#pre-margins-noclacss-3"><p>Margins</p></a>
@@ -94,7 +94,7 @@
        <div class="item">
            <a href="#good-google-fonts"><h5>Good Google Fonts</h5></a>
            <a href="#good-google-fonts"><h5>Beautiful Web Type</h5></a>
-           <a href="#hackdesign-bs"><h5>HackDesign</h5></a>
+           <a href="#hackdesign-cr"><h5>HackDesign</h5></a>
        </div>
    </div>
 
@@ -178,7 +178,7 @@
         <h5 class="custom-color-grey-2">Carver is development framework that helps create beautiful web page. </h5>
     </div>
     <div class="frame">
-        <div class="grid-bs o_auto" id="grid_bs">
+        <div class="grid-cr o_auto" id="grid_cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Grid System</h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
@@ -247,7 +247,7 @@
                 </div>
             </div>
         </div>
-        <div class="menu-bs" id="menu-bs">
+        <div class="menu-cr" id="menu-cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Navigation bar </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
@@ -317,7 +317,7 @@
                 </div>
             </div>
         </div>
-        <div class="skins-bs" id="skins-bs">
+        <div class="skins-cr" id="skins-cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Skins </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
@@ -329,7 +329,7 @@
                         <li><code>.inform</code> : to show an inform message (grey color). To add to <code>.box</code></li>
                         <li><code>.inform-blue</code> : to show an inform message (blue color). To add to <code>.box</code></li>
                         <li><code>.butt</code> : to make quickly a button. To add to submit, button, or just a to make a button.</li>
-                        <li><code>.butt-bs</code> : Another version of <code>.butt</code>.</li>
+                        <li><code>.butt-big</code> : to make a button, but bigger.</li>
                         <li><code>.butt-blue</code> : to make a button, but in blue. To add to <code>.butt</code></li>
                         <li><code>.butt-space</code> : a little space, margin and padding, it’s can only be good.</li>
                         <li><code>.butt-space-margin</code> : for margin space.</li>
@@ -385,7 +385,7 @@
                 </div>
             </div>
         </div>
-        <div class="utilities-bs" id="utilities-bs">
+        <div class="utilities-cr" id="utilities-cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Utilities &amp; CSS Prewrited classes </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center bigger-t">
@@ -546,7 +546,7 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
                 </div>
             </div>
         </div>
-        <div class="clacss-bs" id="claCss-bs">
+        <div class="clacss-cr" id="claCss-cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> ClaCss.js </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center bigger-t">
@@ -557,7 +557,7 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
                 </div>
             </div>
         </div>
-        <div class="no-clacss-js" id="no-clacss-js-bs">
+        <div class="no-clacss-js" id="no-clacss-js-cr">
             <h2 class="ma-tb_25 ma-l_50 custom-color-brand"> Only if you don't use ClaCss.js </h2>
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center bigger-t">
@@ -655,7 +655,7 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
         </div>
 
         <h2 class="ma-tb_25 ma-l_50 custom-color-brand" id="good-google-fonts"><a href="https://stabla.github.io/good-google-fonts/" class="a_reset">Good Google Fonts</a> &amp; <a href="http://chad.is/beautiful-web-type/" class="a_reset">Beautiful Web Type</a></h2>
-        <h2 class="ma-tb_25 ma-l_50 custom-color-brand" id="hackdesign-bs"><a href="http://www.hackdesign.org" class="a_reset">Hack Design</a></h2>
+        <h2 class="ma-tb_25 ma-l_50 custom-color-brand" id="hackdesign-cr"><a href="http://www.hackdesign.org" class="a_reset">Hack Design</a></h2>
 
 
         <h2 class="ma-l_50 custom-color-brand"><a id="License"></a>License</h2>
@@ -667,19 +667,19 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
         </div>
 
 
-        <h2 class="ma-l_50 ma-b_20 custom-color-brand" id="build-yours-bs">Build yours</h2>
+        <h2 class="ma-l_50 ma-b_20 custom-color-brand" id="build-yours-cr">Build yours</h2>
         <div class="build-yours ma-tb_20 d_block">
             <div class="row">
                 <div class="cl-8 cl-s-10 cl-xs-12 center">
                     <div class="custom-dl">
                         <div class="box-custom-dl c_white">
                             <div class="custom-checkbox unselected" style="padding: 33px;" id="Basesign"><a href="http://stabla.github.io/Basesign/" class="a_reset" target="_blank">Open Basesign</a></div>
-                            <div class="ckbx custom-checkbox selected" id="bs_grid"> Grid system </div>
-                            <div class="ckbx custom-checkbox selected" id="bs_nav"> Nav system </div>
-                            <div class="ckbx custom-checkbox selected" id="bs_skins"> Skins </div>
-                            <div class="ckbx custom-checkbox selected" id="bs_utilities"> Utilities &amp; Prebuilded tools </div>
+                            <div class="ckbx custom-checkbox selected" id="cr_grid"> Grid system </div>
+                            <div class="ckbx custom-checkbox selected" id="cr_nav"> Nav system </div>
+                            <div class="ckbx custom-checkbox selected" id="cr_skins"> Skins </div>
+                            <div class="ckbx custom-checkbox selected" id="cr_utilities"> Utilities &amp; Prebuilded tools </div>
                             <div class="choice-case custom-checkbox d_flex">
-                                <div class="ckbx d_inline-block box-a selected" id="bs_noClaCss"> Carver CSS</div>
+                                <div class="ckbx d_inline-block box-a selected" id="cr_noClaCss"> Carver CSS</div>
 
                                 <div class="d_inline-block box-b unselected" id="claCss">
                                 <a href="https://github.com/stabla/ClaCss/zipball/master" class="a_reset">Get ClaCSS.js</a>
@@ -691,7 +691,7 @@ Kafka's writing has inspired the term &lt;span class="bold"&gt;"Kafkaesque"&lt;/
                     <div class="custom-dl-btn o_auto">
                         <button class="custom-btn p_relative" id="create">Download</button>
                     </div>
-                    <div class="text-to-head d_none" id="install-bs">
+                    <div class="text-to-head d_none" id="install-cr">
 
                             <div class="nav-bar">
                         <pre><code class="language-html">
